Bug 1136046 - Increase maximum capacity of js::HashMap and HashSet r=luke